feat(server): Create bookmark endpoint (#17)
* feat: Add Bookmarker service

* refactor(api): Rename `displayName` to `title` and remove `description`

* refactor(schema): Make all primary keys uuids

* refactor(api): Generate uuid.UUID in api package

* feat: Make CreateBookmark work end to end

* test: Fix tests and introduce moq

* chore: Use values instead of pointers
