# api/openapi.v1.yaml
@@ -190,6 +190,9 @@ components:
       description: System-generated unique identifier for the bookmark.
       schema:
         type: string
+        x-go-type: uuid.UUID
+        format: uuid
+      x-go-type: uuid.UUID
     BookmarkKey.collectionId:
       name: collectionId
       in: path
@@ -197,6 +200,9 @@ components:
       description: System-generated unique identifier for the collection.
       schema:
         type: string
+        x-go-type: uuid.UUID
+        format: uuid
+      x-go-type: uuid.UUID
     BookmarkKey.userId:
       name: userId
       in: path
@@ -204,6 +210,9 @@ components:
       description: System-generated unique identifier for the user.
       schema:
         type: string
+        x-go-type: uuid.UUID
+        format: uuid
+      x-go-type: uuid.UUID
     BookmarkParentKey.collectionId:
       name: collectionId
       in: path
@@ -211,6 +220,9 @@ components:
       description: System-generated unique identifier for the collection.
       schema:
         type: string
+        x-go-type: uuid.UUID
+        format: uuid
+      x-go-type: uuid.UUID
     BookmarkParentKey.userId:
       name: userId
       in: path
@@ -218,6 +230,9 @@ components:
       description: System-generated unique identifier for the user.
       schema:
         type: string
+        x-go-type: uuid.UUID
+        format: uuid
+      x-go-type: uuid.UUID
     CollectionKey.collectionId:
       name: collectionId
       in: path
@@ -225,6 +240,9 @@ components:
       description: System-generated unique identifier for the collection.
       schema:
         type: string
+        x-go-type: uuid.UUID
+        format: uuid
+      x-go-type: uuid.UUID
     CollectionKey.userId:
       name: userId
       in: path
@@ -232,6 +250,9 @@ components:
       description: System-generated unique identifier for the user.
       schema:
         type: string
+        x-go-type: uuid.UUID
+        format: uuid
+      x-go-type: uuid.UUID
     CollectionParentKey:
       name: userId
       in: path
@@ -239,26 +260,34 @@ components:
       description: System-generated unique identifier for the user.
       schema:
         type: string
+        x-go-type: uuid.UUID
+        format: uuid
+      x-go-type: uuid.UUID
   schemas:
     Bookmark:
       type: object
       required:
         - id
         - url
+        - title
         - tags
         - createTime
         - updateTime
       properties:
         id:
           type: string
+          format: uuid
           description: System-generated unique identifier for the bookmark.
-          readOnly: true
+          x-go-type: uuid.UUID
         parentId:
           type: string
+          format: uuid
           description: System-generated unique identifier for the parent collection.
+          x-go-type: uuid.UUID
+          readOnly: true
         url:
           type: string
-        displayName:
+        title:
           type: string
         tags:
           type: array
@@ -277,14 +306,12 @@ components:
       type: object
       required:
         - url
+        - title
         - tags
       properties:
-        parentId:
-          type: string
-          description: System-generated unique identifier for the parent collection.
         url:
           type: string
-        displayName:
+        title:
           type: string
         tags:
           type: array
@@ -294,10 +321,7 @@ components:
     BookmarkUpdate:
       type: object
       properties:
-        parentId:
-          type: string
-          description: System-generated unique identifier for the parent collection.
-        displayName:
+        title:
           type: string
         tags:
           type: array
@@ -308,23 +332,22 @@ components:
       type: object
       required:
         - id
-        - displayName
+        - name
         - createTime
         - updateTime
       properties:
         id:
           type: string
+          format: uuid
           description: System-generated unique identifier for the collection.
+          x-go-type: uuid.UUID
           readOnly: true
         parentId:
           type: string
+          format: uuid
           description: System-generated unique identifier for the parent collection.
-        parentCollection:
-          type: string
-          readOnly: true
-        displayName:
-          type: string
-        description:
+          x-go-type: uuid.UUID
+        name:
           type: string
         createTime:
           type: string
@@ -351,14 +374,14 @@ components:
     CollectionCreate:
       type: object
       required:
-        - displayName
+        - name
       properties:
         parentId:
           type: string
+          format: uuid
           description: System-generated unique identifier for the parent collection.
-        displayName:
-          type: string
-        description:
+          x-go-type: uuid.UUID
+        name:
           type: string
       description: Resource create operation model.
     CollectionUpdate:
@@ -366,10 +389,10 @@ components:
       properties:
         parentId:
           type: string
+          format: uuid
           description: System-generated unique identifier for the parent collection.
-        displayName:
-          type: string
-        description:
+          x-go-type: uuid.UUID
+        name:
           type: string
       description: Resource create or update operation model.
     Error:
@@ -412,7 +435,9 @@ components:
       properties:
         id:
           type: string
+          format: uuid
           description: System-generated unique identifier for the user.
+          x-go-type: uuid.UUID
           readOnly: true
         createTime:
           type: string
